--- a/Morpheus/hengda.lizongming.reams/src/HengDa.LiZongMing.REAMS.EntityFrameworkCore.DbMigrations/HengDa.LiZongMing.REAMS.EntityFrameworkCore.DbMigrations.csproj
+++ b/Morpheus/hengda.lizongming.reams/src/HengDa.LiZongMing.REAMS.EntityFrameworkCore.DbMigrations/HengDa.LiZongMing.REAMS.EntityFrameworkCore.DbMigrations.csproj
@@ -17,4 +17,8 @@
         <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
